NavBar Z-index Fix && No Decimal on Price Input

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -73,6 +73,7 @@
   border-radius: 12px;
   margin: 0px 25px;
   width: 330px;
+  z-index: 0px;
 }
 
 .modal-button {
