--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
+  z-index: 2;
   margin-top: 10px;
   /* padding: 10px 10px; */
   height: 185px;
@@ -11,8 +12,8 @@
   border-radius: 10px;
   border: 1px solid #dddddd;
   right: 110px;
-  /* z-index: 1; */
 }
+
 * {
   font-family: 'Montserrat', sans-serif;
 }
@@ -26,6 +27,7 @@
   padding: 7px;
   display: flex;
   justify-content: space-around;
+  /* z-index: 1; */
 }
 
 .user-button:hover {
