--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,6 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  z-index: 5;
 }
 
 #modal-background {
@@ -16,10 +18,13 @@
   left: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
+
+  /* z-index: 5; */
 }
 
 #modal-content {
   position: absolute;
   background-color:white;
   border-radius: 10px;
+  /* z-index: 5; */
 }
